--- a/iceyee_random/Cargo.toml
+++ b/iceyee_random/Cargo.toml
@@ -6,11 +6,13 @@
 #                                                   
 [package]
 name = "iceyee_random"
-version = "1.0.0"
+version = "1.0.1"
 edition = "2021"
-readme = "README.md"
+
 description = "Random."
+keywords = ["random"]
 license = "Apache-2.0"
+readme = "README.md"
 repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_random/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
