--- a/iceyee_timer/Cargo.toml
+++ b/iceyee_timer/Cargo.toml
@@ -6,7 +6,7 @@
 #                                                   
 [package]
 name = "iceyee_timer"
-version = "1.0.1"
+version = "1.0.2"
 edition = "2021"
 readme = "README.md"
 description = "Timer."
@@ -16,5 +16,5 @@ repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_timer/"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-iceyee_datetime = "1.0.0"
-tokio = { version = "=1.21.2", features = ["full"] }
+iceyee_datetime = "1"
+tokio = { version = "1", features = ["full"] }
