--- a/iceyee_random/Cargo.toml
+++ b/iceyee_random/Cargo.toml
@@ -6,11 +6,11 @@
 #                                                   
 [package]
 name = "iceyee_random"
-version = "1.0.2"
+version = "1.0.3"
 edition = "2021"
 
 description = "Random."
-keywords = ["random"]
+keywords = ["iceyee", "random"]
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_random/"
