--- a/iceyee_timer/Cargo.toml
+++ b/iceyee_timer/Cargo.toml
@@ -6,11 +6,11 @@
 #                                                   
 [package]
 name = "iceyee_timer"
-version = "1.0.2"
+version = "1.0.3"
 edition = "2021"
 
 description = "Timer."
-keywords = ["timer"]
+keywords = ["iceyee", "timer", "schedule"]
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_timer/"
