--- a/iceyee_logger/Cargo.toml
+++ b/iceyee_logger/Cargo.toml
@@ -6,11 +6,11 @@
 #                                                   
 [package]
 name = "iceyee_logger"
-version = "1.0.1"
+version = "1.0.2"
 edition = "2021"
 
 description = "Logger."
-keywords = ["logger"]
+keywords = ["iceyee", "logger"]
 license = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_logger/"
