--- a/iceyee_config/Cargo.toml
+++ b/iceyee_config/Cargo.toml
@@ -6,7 +6,7 @@
 #                                                   
 [package]
 name = "iceyee_config"
-version = "1.0.2"
+version = "1.0.3"
 edition = "2021"
 
 description = "Config file parser."
@@ -18,7 +18,7 @@ repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_config/"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = { version = "=1.0.147", features = ["derive"] }
-serde_json = "=1.0.87"
-serde_yaml = "=0.9.14"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_yaml = "0.9"
 tokio = { version = "1", features = ["full"] }
