--- a/iceyee_logger/Cargo.toml
+++ b/iceyee_logger/Cargo.toml
@@ -6,7 +6,7 @@
 #                                                   
 [package]
 name = "iceyee_logger"
-version = "1.0.2"
+version = "1.0.3"
 edition = "2021"
 
 description = "Logger."
@@ -18,7 +18,7 @@ repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_logger/"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ctor = "=0.1.26"
+ctor = "0.2"
 iceyee_datetime = "1"
 iceyee_timer = "1"
 tokio = { version = "1", features = ["full"] }
