--- a/iceyee_net/Cargo.toml
+++ b/iceyee_net/Cargo.toml
@@ -14,9 +14,13 @@ edition = "2021"
 [dependencies]
 async-compression = { version = "0.4", features = ["all"] }
 async-trait = "=0.1"
-iceyee_encoder = "1.3"
-iceyee_error = "1.0"
-iceyee_random= "1.0"
+iceyee_datetime = "3"
+iceyee_encoder = "3"
+iceyee_error = "3"
+iceyee_logger = "3"
+iceyee_random = "3"
 native-tls = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 tokio-native-tls = "0.3"
