补充一点文件.

--- a/iceyee_net/Cargo.toml
+++ b/iceyee_net/Cargo.toml
@@ -9,6 +9,12 @@ name = "iceyee_net"
 version = "1.0.0"
 edition = "2021"
 
+description = "Net Protocol."
+keywords = ["http", "http client", "http server"]
+license = "Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_net/"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
