--- a/iceyee_logger/Cargo.toml
+++ b/iceyee_logger/Cargo.toml
@@ -6,19 +6,17 @@
 #                                                   
 [package]
 name = "iceyee_logger"
-version = "3.0.3"
+version = "4.0.0"
 edition = "2021"
 
 description = "Logger."
 keywords = ["iceyee", "logger"]
 license = "Apache-2.0"
-readme = "README.md"
 repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_logger/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 ctor = "0.2"
-iceyee_datetime = "3"
-iceyee_timer = "3"
+iceyee_time = "4"
 tokio = { version = "1", features = ["full"] }
