--- a/iceyee_webdriver/Cargo.toml
+++ b/iceyee_webdriver/Cargo.toml
@@ -6,7 +6,7 @@
 #                                                   
 [package]
 name = "iceyee_webdriver"
-version = "1.0.2"
+version = "2.0.0"
 edition = "2021"
 
 description = "web selenium."
@@ -19,6 +19,7 @@ repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_webdriver/"
 [dependencies]
 cookie = "0.16"
 iceyee_logger = "6" 
+iceyee_random = "6" 
 iceyee_time = "6" 
 thirtyfour = "0.31" 
 tokio = { version = "1", features = ["full"] } 
