--- a/iceyee_webdriver/Cargo.toml
+++ b/iceyee_webdriver/Cargo.toml
@@ -21,5 +21,6 @@ cookie = "0.16"
 iceyee_logger = "6" 
 iceyee_random = "6" 
 iceyee_time = "6" 
+serde_json = "1.0" 
 thirtyfour = "0.31" 
 tokio = { version = "1", features = ["full"] } 
