--- a/iceyee_net/Cargo.toml
+++ b/iceyee_net/Cargo.toml
@@ -6,7 +6,7 @@
 #                                                   
 [package]
 name = "iceyee_net"
-version = "6.0.2"
+version = "6.1.0"
 edition = "2021"
 
 description = "Net Protocol."
@@ -22,6 +22,7 @@ iceyee_encoder = "6"
 iceyee_logger = "6"
 iceyee_random = "6"
 iceyee_time = "6"
+lettre = "0.11" 
 native-tls = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
