--- a/iceyee_logger/Cargo.toml
+++ b/iceyee_logger/Cargo.toml
@@ -6,7 +6,7 @@
 #                                                   
 [package]
 name = "iceyee_logger"
-version = "12.0.1"
+version = "12.0.2"
 edition = "2024"
 
 description = "Logger."
@@ -18,4 +18,5 @@ repository = "https://github.com/iceyee/rust_iceyee/tree/main/iceyee_logger/"
 
 [dependencies]
 iceyee_time = "12"
+lazy_static = "1" 
 tokio = { version = "1", features = ["full"] }
